# Euclidean-Geometry-Cpp

./: .gitignore  04022025_cpp.txt  0402205_Headers.txt  05022025_cpp.txt  13022025_cpp.txt  13022025_headers.txt  Angle.cpp  Angle.h  BUILD.md  Benchmark.cpp  Benchmark.h  CGALExceptions.h  CGALSafeUtils.h  CGALWrapper.cpp  CGALWrapper.h  CMakeLists.txt  CMakePresets.json  CharTraitsFix.h  Circle.cpp  Circle.h  Circle_old.cpp  Circle_old.h  Command.h  CommandManager.h  CommandSystem.h  Commands.cpp  Commands.h  CompilerFixes.h  Config.cpp  Config.h  Constants.h  ConstraintUtils.cpp  ConstraintUtils.h  ConstructionObjects.h  ContextMenu.cpp  ContextMenu.h  DebugUtils.h  Deserializer.cpp  Deserializer.h  DiagnosticTool.h  (+97 more)
.agent/: BUG_FIX_RECTANGLE_CONSTRAINTS.md  REFACTORING_PLAN.md
.agent/rules/: rules-of-project.md
.cache/clangd/index/: CGALErrorHandler.h.DDBA3E779CCEBD44.idx  CGALExceptions.h.7268973C83DBD552.idx  CGALExceptions.h.A48B5B7F87DC5830.idx  CGALSafeUtils.h.6DF12465A79B82BA.idx  CGALSafeUtils.h.787AB1034FAC89F4.idx  CharTraitsFix.h.233FB52B2C96F31E.idx  CharTraitsFix.h.6FAA41E9DC262096.idx  Circle.cpp.54FC7861035F2E8A.idx  Circle.cpp.DEDB6B72F22A2BED.idx  Circle.h.1A8CEBC02CF07EB2.idx  Circle.h.EFCA3EEB59439B70.idx  Command.h.A35B4E0791CE0B8D.idx  Command.h.A903338BB9D1608C.idx  CommandManager.h.8D7C5175F69D12B9.idx  CommandManager.h.EBBAA4BA563AD53D.idx  CompilerFIxes.h.87542A6ACFDE2A0D.idx  CompilerFixes.h.34D032FAF960413F.idx  CompilerFixes.h.35221447D0F77B7B.idx  Config.cpp.35C22EBC4DC71F18.idx  Config.h.AB0912EB333C8D4B.idx  Constants.h.49D8BC44A280F6E1.idx  Constants.h.5E746F2DE9A53A59.idx  ContextMenu.cpp.0D0D21ADAD51C962.idx  ContextMenu.h.7C66BCD83AA74651.idx  DraggableCircle.cpp.A2B1F3C5E9B4979B.idx  DraggableCircle.h.871ABCBFA9EEA314.idx  DynamicIntersection.h.C64DE445FA92950F.idx  DynamicIntersection.h.DF25E71D026CFA9F.idx  ForwardDeclarations.h.1B96D2F4C31E6BCB.idx  ForwardDeclarations.h.717B7F96AECDB793.idx  GMP_exception_handler.cpp.3645DB49D138BED7.idx  GMP_exception_handler.cpp.E7B0CDFFF28428DF.idx  GMP_exception_handler.h.044075162CFE9F8A.idx  GMP_exception_handler.h.7C5F4E1F2866F2C4.idx  GUI.cpp.768568EF8E5F72EC.idx  GUI.cpp.B303CC415D6484D8.idx  GUI.h.1454FEE227B056BE.idx  GUI.h.C4163E1225C49417.idx  GenericDeleteCommand.h.194501D43565612D.idx  GeometricObject.cpp.388E743327DF27C5.idx  (+80 more)
.github/instructions/: RULES.md.instructions.md
Documentation/: CGAL_Lazy_Evaluation_Fix.md  DESERIALIZER_REFACTORING.md  Fix_Selection_Priority.md  Line-Draw-Documentation.md  LoaderFixes_Feb2026.md  Point-Snapping-and-Line-Creation.md  Resurrection_and_Labeling_Fix.md  Snapping_and_ObjectPoint_Fixes.md  TextObject_Persistence_Debug.md  TransformationTooltip.md  Transformations.md  Translate-By-Vector.md  parallel_perpendicular_tool_fix.md
Documentation/CHANGES/: rectangle_snippets.md
Documentations/: Fix_Selection_Priority.md  Transformations.md  Translate-By-Vector.md
FluxGeo_Linux/: FluxGeo  run.sh
libs/MicroTeX/src/utils/: string_utils.h
linux-tests/: CMakeLists.txt
linux-tests/src/: CMakeLists.txt  LineDebuggingTest.cpp  PointTest.cpp
